# small-raytracer

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  basis.hh  build.ninja  camera.hh  cmake_install.cmake  color3.hh  hit.hh  image.hh  light.hh  main.cc  object.hh  pixel.hh  point2.hh  point3.hh  ray.cc  ray.hh  ray_impl.hh  scene.hh  screen.cc  screen.hh  vector3.hh
.cmake/api/v1/reply/: cache-v2-0deebf06766f3fc68f43.json  cmakeFiles-v1-85ad16554d4abb513ee3.json  codemodel-v2-e739bc071b08cd56572f.json  index-2025-04-07T08-43-15-0911.json  target-out-775ebd1cc88d1f0cad65.json
include/: camera.hh  color3.hh  image.hh  light.hh  object.hh  point2.hh  ray.hh  scene.hh  screen.hh  vector3.hh
output/: output.ppm
src/: camera.cc  image.cc  main.cc  ray.cc  screen.cc  sphere.cc
